[package]
name = "zhoo-driver"
edition.workspace = true

[dependencies]
zhoo-compiler = { workspace = true }
zhoo-session = { workspace = true }

zo-core = { workspace = true }

clap = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
smol_str = { workspace = true }
