[package]
name = "zhoo-driver"
license.workspace = true
edition.workspace = true

[dependencies]
zhoo-compiler = { workspace = true }
zhoo-session = { workspace = true }

zo-core = { workspace = true, features = ["kanal"] }

clap = { workspace = true }
serde = { workspace = true }
smol_str = { workspace = true }
