[package]
name = "zhoo-driver"
authors.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true

[lib]
doctest = false
test = false

[dependencies]
zhoo-compiler = { workspace = true }
zhoo-session = { workspace = true }

zo-core = { workspace = true }

arboard = { workspace = true }
clap = { workspace = true }
smol_str = { workspace = true }
