[package]
name = "zhoo-inferencer"
license.workspace = true
edition.workspace = true

[dependencies]
zhoo-ast = { workspace = true }
zhoo-session = { workspace = true }
zhoo-ty = { workspace = true }
zhoo-tychecker = { workspace = true }

zo-core = { workspace = true }

serde = { workspace = true }
