[package]
name = "zhoo-inferencer"
authors.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
zhoo-ast = { workspace = true }
zhoo-session = { workspace = true }
zhoo-ty = { workspace = true }
zhoo-tychecker = { workspace = true }

zo-core = { workspace = true }
