[package]
name = "zhoo-interpreter"
authors.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
zhoo-ast = { workspace = true }
zhoo-interpreter-clif = { workspace = true }
zhoo-interpreter-zo = { workspace = true }
zhoo-session = { workspace = true }
zhoo-value = { workspace = true }

zo-core = { workspace = true }
