[package]
name = "zhoo-parser"
license.workspace = true
edition.workspace = true

[dependencies]
zhoo-ast = { workspace = true }
zhoo-session = { workspace = true }
zhoo-tokenizer = { workspace = true }

zo-core = { workspace = true }

serde = { workspace = true }
serde_derive = { workspace = true }
