[package]
name = "zhoo-reader"
license.workspace = true
edition.workspace = true

[dependencies]
zhoo-session = { workspace = true }

zo-core = { workspace = true }

criterion = { workspace = true }
serde = { workspace = true }
smol_str = { workspace = true }

[[bench]]
name = "read"
harness = false
