[package]
name = "zhoo-reader"
authors.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
zhoo-session = { workspace = true }

zo-core = { workspace = true }

criterion = { workspace = true }
smol_str = { workspace = true }

[[bench]]
name = "read"
harness = false
