[package]
name = "zhoo-tokenizer"
edition.workspace = true

[dependencies]
zhoo-session = { workspace = true }

zo-core = { workspace = true }

hashbrown = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
smol_str = { workspace = true }
