[package]
name = "zhoo-tokenizer"
authors.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
zhoo-session = { workspace = true }

zo-core = { workspace = true }

hashbrown = { workspace = true }
lazy_static = { workspace = true }
smol_str = { workspace = true }

[dev-dependencies]
zhoo-reader = { workspace = true }

criterion = { workspace = true }

[[bench]]
name = "tokenize"
harness = false
