[package]
name = "zo-analyzer"
authors.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true

[lib]
test = false
doctest = false

[dependencies]
# sources.
zo-core = { workspace = true }

# internals.
zo-ast = { workspace = true }
zo-checker = { workspace = true }
zo-tychecker = { workspace = true }
zo-session = { workspace = true }

# externals.
