[package]
name = "zo-ast"
authors.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true

[lib]
test = false
doctest = false

[dependencies]
# sources.
zo-core = { workspace = true }

# internals.
zo-tokenizer = { workspace = true }
zo-ty = { workspace = true }

# externals.
smol_str = { workspace = true }
