[package]
name = "zo-ast"
version.workspace = true
edition.workspace = true

[dependencies]
# internal:source.
swisskit = { workspace = true }

# internal:crates.
zo-interner = { workspace = true }
zo-tokenizer = { workspace = true }
zo-ty = { workspace = true }

# external:crates.
smol_str = { workspace = true }
thin-vec = { workspace = true }
